# teams-thread-summarizer

./: LICENSE  README.md  main.py  pyproject.toml
src/thread_chatbot/: main.py  prompt.py
